# lanverso-industrial-dataset-release

./: README.md  pyproject.toml  test_dataset_use.py
lanverso_industrial_dataset_helper/: __init__.py  lanverso_industrial_dataset_helper.py  pyproject.toml  test_dataset_use.py
lanverso_industrial_dataset_helper/data/: industrial_dataset_list.json
