[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lanverso_industrial_dataset_helper"
authors = [{name = "Jon Azpiazu", email = "jon.azpiazu@tecnalia.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "open3d>=0.17.0",
  "requests>=2.31.0",
  "natsort>=8.4.0",
  "pathlib>=1.0.1",
]

[project.urls]
Home = "https://github.com/jonazpiazu/lanverso-industrial-dataset-release/"
